# egon

./: .env.example  .gitignore  ARCHITECTURE.md  AUTOTRADING_QUICK_FIX.md  BOTS_FINAL_FIX.md  BOT_CONFIG_VERIFICATION.md  BOT_STARTUP_FIXED.md  BOT_WEEKEND_BEHAVIOR.md  CLEANUP_SUMMARY.md  COMPLETE_TREND_BOT_SUMMARY.md  CONFIG_CLEANUP_SUMMARY.md  CRITICAL_BUG_FIX_GAP_WARMUP.md  DEMO_ACCOUNT_TRADING_DISABLED.md  DIAGNOSTIC_LOGGING.md  DOMINION_MT5_SETUP.md  DOMINION_QUICK_FIX.md  DUAL_BOT_GUIDE.md  DYNAMIC_SIZING_INTEGRATION.md  FIX_AUTOTRADING.md  GAP_TRADING_ANALYSIS.md  GIT_COMMIT_SUMMARY.md  GUI_GUIDE.md  GUI_IMPROVEMENTS_SUMMARY.md  GUI_IMPROVEMENTS_V2.md  GUI_REDESIGN_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LEVERAGE_EXPLAINED.md  LEVERAGE_QUICK_REFERENCE.md  LIMIT_ORDERS_SUMMARY.md  LIVE_TRADING_GUIDE.md  LOSING_STREAK_ANALYSIS.md  M1_ADAPTIVE_EXITS.md  M1_ANALYSIS_RECOMMENDATIONS.md  M1_BOT_FIXED.md  M1_TESTING_RESULTS.md  M5_ADAPTIVE_PROFIT_TAKING.md  M5_AGGRESSIVE_UPGRADE.md  M5_POSITION_SIZING_ANALYSIS.md  MRKTEDGE_INTEGRATION_PLAN.md  (+93 more)
.github/workflows/: build.yml
.kiro/steering/: architecture-v2.md  architecture.md  status.md  (+6 more)
analysis/: README.md  REPORT_90h_with_evolution.md  _TEMPLATE_analysis_script.py  _analyze_9h_live.py  _check_sizing.py  _quick.py  _sl_distance_check.py  accurate_backtest.py  add_market_close_protection.md  aggressive_strategy.py  analyze_12h.py  analyze_22h_tick_m5s.py  analyze_90h.py  analyze_9h.py  analyze_daily.py  analyze_drawdown_limits.py  analyze_failed_trade.py  analyze_live_performance.py  analyze_losing_streaks.py  analyze_m1_losses.py  analyze_m1_noise.py  analyze_m1_tp_hits.py  analyze_m5_trade.py  analyze_recent_m1.py  analyze_strategy.py  analyze_tick_v4_day.py  analyze_todays_trades.py  check_current_signals.py  check_m1_signals.py  check_m5_signals_24h.py  check_open_positions.py  check_profit_history.py  check_recent_trades.py  check_sl_details.py  compare_last_10_hours.py  comprehensive_m5_analysis.py  deep_analysis_48h.py  deep_trade_analysis.py  enhanced_strategy.py  find_matching_trade.py  (+48 more)
config/: README.md  bot_config.json  breakout_breakout_237116.json  breakout_params.json  gap_params.json  hybrid_strategy_params.json  lz_params.json  m15_params.json  m15s_params.json  m1_params.json  m1_params_previous.json  m1s_params.json  m5_params.json  m5_params_previous.json  m5s_params.json  market_sentiment.json  momentum_params.json  optimized_strategy_params.json  safe_leveraged_params.json  sniper_m1_sniper_dynamic_237144.json  sniper_m1_sniper_gated_239711.json  sniper_m5_sniper_alt_236904.json  sniper_new.json  tick_params.json  trading_params.json  trading_params_optimized.json  trend_params.json
data/: exit_reasons_brk.json  exit_reasons_lz.json  exit_reasons_m1.json  exit_reasons_m15.json  exit_reasons_m15s.json  exit_reasons_m1s.json  exit_reasons_m5.json  exit_reasons_m5s.json  exit_reasons_momentum.json  exit_reasons_sni144.json  exit_reasons_sni711.json  exit_reasons_sni904.json  exit_reasons_tick.json
docs/: breakout_bot_guide.html  pip_scalper_guide.html  sniper_bot_guide.html
examples/: optimize_parameters.py  optimize_with_sample_data.py  run_backtest.py
src/: __init__.py  base_trading_bot.py  bot.py  mt5_connector.py  position_sizing.py  risk_management.py  timezone_utils.py
tests/: PERFORMANCE_OPTIMIZATION.md  QUICK_START.md  README.md  README_SENTIMENT.md  __init__.py  _quick_account.py  _test_fetch.py  _test_rhythm.py  _test_sim_v2.py  analyze_risk.py  backtest_gap_period.py  backtest_sampled_sentiment.py  backtest_trend.py  backtest_with_historical_sentiment.py  baseline_m1.json  baseline_m5.json  benchmark_monte_carlo.py  compare_to_baseline.py  compare_with_without_sentiment.py  current_configs_monte_carlo_results.json  data_cache.py  establish_baseline.py  m1_monte_carlo_results.json  m5_monte_carlo_results.json  optimize_m1.py  optimize_m1_monte_carlo.py  optimize_m5.py  optimize_m5_monte_carlo.py  profile_performance.py  rebuild_cache_with_indicators.py  recommended_aggressive_m5.json  run_abc_comparison.py  run_backtest.py  run_comparison.py  run_lz_backtest.py  run_m15_grid.py  run_monte_carlo.py  run_replay.py  run_test_suite.py  sim_broker.py  (+17 more)
(+62 files in other folders)
